--- a/utils/readme
+++ b/utils/readme
@@ -1,4 +1,6 @@
 
+grep POSIX darshan_dxt.txt | grep write | grep <datasize> | awk '{print $2,$4,$6,$7,$8-$7}' | sort -k4n > example.ost
+
 python plot_order_by_start_time.py example.ost
 
 Fields in example.ost
